--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
+org.gradle.parallel=true
 
 loom.platform=neoforge
 fabric.loom.multiProjectOptimisation=true
@@ -8,3 +10,8 @@ fabric.loom.multiProjectOptimisation=true
 versionMc=1.20.6
 versionForge=20.6.13-beta
 versionYarn=1.20.6+build.1
+versionForgifiedFabricLoader=2.6.9+0.15.10+1.20.6
+versionJCC=0.1.33
+
+versionUpstreamFabricApi=0.97.8
+versionFabricLoader=0.15.10
