Generate mod entrypoints

--- a/fabric-api-base/build.gradle
+++ b/fabric-api-base/build.gradle
@@ -1,4 +1,4 @@
-//version = getSubprojectVersion(project)
+version = getSubprojectVersion(project)
 
 //testDependencies(project, [
 //	':fabric-command-api-v2',
