--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,8 @@ org.gradle.parallel=true
 loom.platform=neoforge
 fabric.loom.multiProjectOptimisation=true
 
+implementationVersion=2.0.0
+
 versionMc=1.20.6
 versionForge=20.6.13-beta
 versionYarn=1.20.6+build.1
