Disable needless remapping

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ org.gradle.parallel=true
 
 loom.platform=neoforge
 fabric.loom.multiProjectOptimisation=true
+fabric.loom.dontRemap=true
 
 implementationVersion=2.0.0
 
