--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "fabric-api-upstream"]
-	path = fabric-api-upstream
+[submodule "api-meta/fabric-api-upstream"]
+	path = api-meta/fabric-api-upstream
 	url = https://github.com/FabricMC/fabric
